--- a/dashboard/src/assets/sass/lbd/_buttons.scss
+++ b/dashboard/src/assets/sass/lbd/_buttons.scss
@@ -114,6 +114,8 @@
     font-weight: 600;
     border: none !important;
     background: #3CB1C6 !important;
+    margin-bottom: 10px;
+    float: right;
 }
 
 .btn-TNO-color  {
