--- a/dashboard/src/assets/sass/lbd/_cardContent.scss
+++ b/dashboard/src/assets/sass/lbd/_cardContent.scss
@@ -3,7 +3,7 @@
      min-height: 20%;
      background: none;  
      border-radius: 1px;
-     margin: 8px 0px 8px 0px;
+     margin: 8px;
         .content-header {
             margin: 0;
         }
