input data and input radius

--- a/dashboard/src/assets/sass/lbd/_flexbox.scss
+++ b/dashboard/src/assets/sass/lbd/_flexbox.scss
@@ -3,6 +3,11 @@
     display: flex;
     flex-direction: column;
 }
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
 .flex-container {
     width: 100%;
     margin: 0;
