--- a/dashboard/src/assets/sass/lbd/_inputs.scss
+++ b/dashboard/src/assets/sass/lbd/_inputs.scss
@@ -139,3 +139,15 @@
 .input-group-focus .input-group-addon{
     border-color: $dark-gray;
 }
+
+.input-number {
+   background: #000 !important;
+}
+
+.drop {
+   width: 500px !important;     
+}
+
+.label-prediction {
+    margin: 15px 0px 0px 0px;
+}
