--- a/dashboard/src/assets/sass/lbd/_inputs.scss
+++ b/dashboard/src/assets/sass/lbd/_inputs.scss
@@ -144,8 +144,8 @@
    background: #000 !important;
 }
 
-.drop {
-   width: 500px !important;     
+.input_predict {
+    width: 500px !important;
 }
 
 .label-prediction {
