--- a/dashboard/src/assets/sass/lbd/_flexbox.scss
+++ b/dashboard/src/assets/sass/lbd/_flexbox.scss
@@ -4,9 +4,23 @@
     flex-direction: column;
 }
 
-.flex-row {
+.fieldset_predict {
+    background: #c6c6c6;
     display: flex;
-    flex-direction: row;
+    flex-direction: row;  
+    width: 100%;
+    height: 500px;
+}
+
+.fieldset_predict_itens {
+    background: #6c6c6c;  
+    width: 50%;
+    height: 400px;
+    margin: 50px 20px;
+}
+
+.fieldset_predict_subitens {
+    width: 100% !important;
 }
 .flex-container {
     width: 100%;
@@ -105,7 +119,7 @@
 
 .item-prediction {
     margin: 10px 20px !important;
-    width: inherit !important;
+    width: 500px !important;
 }
 .button-prediction {
     margin: 10px 20px !important;
