--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -913,6 +913,15 @@ body > .navbar-collapse[data-color="purple"]:after {
 .input-group-focus .input-group-addon {
   border-color: #9A9A9A; }
 
+.input-number {
+  background: #000 !important; }
+
+.input_predict {
+  width: 500px !important; }
+
+.label-prediction {
+  margin: 15px 0px 0px 0px; }
+
 .alert {
   border: 0;
   border-radius: 0;
@@ -3485,6 +3494,22 @@ body > .navbar-collapse[data-color="purple"]:after {
   display: flex;
   flex-direction: column; }
 
+.fieldset_predict {
+  background: #c6c6c6;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 500px; }
+
+.fieldset_predict_itens {
+  background: #6c6c6c;
+  width: 50%;
+  height: 400px;
+  margin: 50px 20px; }
+
+.fieldset_predict_subitens {
+  width: 100% !important; }
+
 .flex-container {
   width: 100%;
   margin: 0;
@@ -3498,6 +3523,9 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .flex {
   display: flex; }
+
+.flex-end {
+  align-items: flex-end; }
 
 .space-around {
   justify-content: space-around; }
@@ -3552,6 +3580,15 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .grow-12 {
   flex-grow: 12; }
+
+.item-prediction {
+  margin: 10px 20px !important;
+  width: 500px !important; }
+
+.button-prediction {
+  margin: 10px 20px !important;
+  width: 20% !important;
+  float: right !important; }
 
 .grid {
   display: grid;
@@ -3676,7 +3713,7 @@ body > .navbar-collapse[data-color="purple"]:after {
     grid-gap: 0.75rem;
     grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
     grid-template-rows: auto;
-    grid-template-areas: "content1_predict_occult content2_predict_occult" "history_predict_occult history_predict_occult"; }
+    grid-template-areas: "content1_predict_occult content1_predict_occult" "history_predict_occult history_predict_occult"; }
   .template-predict-astromery {
     grid-gap: 0.75rem;
     grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
@@ -3713,7 +3750,7 @@ body > .navbar-collapse[data-color="purple"]:after {
     grid-gap: 0.75rem;
     grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
     grid-template-rows: auto;
-    grid-template-areas: "content1_predict_occult content2_predict_occult" "history_predict_occult history_predict_occult"; }
+    grid-template-areas: "content1_predict_occult content1_predict_occult" "history_predict_occult history_predict_occult"; }
   .template-predict-astromery {
     grid-gap: 0.75rem;
     grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
