--- a/dashboard/src/assets/sass/lbd/_inputs.scss
+++ b/dashboard/src/assets/sass/lbd/_inputs.scss
@@ -149,5 +149,9 @@
 }
 
 .label-prediction {
-    margin: 15px 0px 0px 0px;
+    margin: 15px 0px 10px 5px;
+    font-size: 1rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    opacity: 0.8;
+    font-weight: 700;
 }
