--- a/dashboard/src/assets/sass/lbd/_flexbox.scss
+++ b/dashboard/src/assets/sass/lbd/_flexbox.scss
@@ -5,7 +5,7 @@
 }
 
 .fieldset_predict {
-    background: #c6c6c6;
+    // background: #c6c6c6;
     display: flex;
     flex-direction: row;  
     width: 100%;
@@ -13,15 +13,12 @@
 }
 
 .fieldset_predict_itens {
-    background: #6c6c6c;  
+    // background: #6c6c6c;  
     width: 50%;
     height: 400px;
     margin: 50px 20px;
 }
 
-.fieldset_predict_subitens {
-    width: 100% !important;
-}
 .flex-container {
     width: 100%;
     margin: 0;
@@ -51,7 +48,7 @@
 }
 
 .row {
-    flex-direction: row;
+    flex-direction: row !important;
 }
 
 .column  {
