--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -920,7 +920,11 @@ body > .navbar-collapse[data-color="purple"]:after {
   width: 500px !important; }
 
 .label-prediction {
-  margin: 15px 0px 0px 0px; }
+  margin: 15px 0px 10px 5px;
+  font-size: 1rem;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  opacity: 0.8;
+  font-weight: 700; }
 
 .alert {
   border: 0;
@@ -3495,20 +3499,15 @@ body > .navbar-collapse[data-color="purple"]:after {
   flex-direction: column; }
 
 .fieldset_predict {
-  background: #c6c6c6;
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 500px; }
 
 .fieldset_predict_itens {
-  background: #6c6c6c;
   width: 50%;
   height: 400px;
   margin: 50px 20px; }
-
-.fieldset_predict_subitens {
-  width: 100% !important; }
 
 .flex-container {
   width: 100%;
@@ -3534,7 +3533,7 @@ body > .navbar-collapse[data-color="purple"]:after {
   justify-content: space-between; }
 
 .row {
-  flex-direction: row; }
+  flex-direction: row !important; }
 
 .column {
   flex-direction: column; }
