--- a/dashboard/src/assets/sass/lbd/_plot.scss
+++ b/dashboard/src/assets/sass/lbd/_plot.scss
@@ -17,3 +17,24 @@
 .plot-alaranjado {
     color: $plot-alaranjado;
 }
+
+
+.plot_predict_radius {
+    width: 637px;
+    height: 492px;
+    margin: 0px 175px;
+    >img {
+        width: 100%;
+        height: inherit
+    }
+}
+
+.plot_predict_earth {
+    width: 411px;
+    height: 296px;
+    margin: 15px 60px;
+    >img {
+        width: 100%;
+        height: inherit
+    }
+}
