--- a/dashboard/src/assets/sass/lbd/_flexbox.scss
+++ b/dashboard/src/assets/sass/lbd/_flexbox.scss
@@ -115,7 +115,7 @@
 // Predicton ocultation
 
 .item-prediction {
-    margin: 10px 20px !important;
+    // margin: 10px 20px !important;
     width: 500px !important;
 }
 .button-prediction {
