prediction_color _cell (#141)
* create a table and image with the plots  #128

* feedback submit

* fix in plots ( Pointings )

* closed function for status color in cell created #140

--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -1065,6 +1065,22 @@ body > .navbar-collapse[data-color="purple"]:after {
 .table .background-danger {
   background-color: #FF4A55 !important; }
 
+.status_table {
+  font-weight: 700;
+  color: #fff;
+  margin: 0 !important;
+  padding: 0 !important;
+  text-align: center;
+  width: 80; }
+  .status_table.running {
+    background-color: #1DC7EA !important; }
+  .status_table.success {
+    background-color: #87CB16 !important; }
+  .status_table.warning {
+    background-color: #FF9500 !important; }
+  .status_table.failure {
+    background-color: #FF4A55 !important; }
+
 /*      Checkbox and radio         */
 .checkbox,
 .radio {
@@ -3610,7 +3626,6 @@ body > .navbar-collapse[data-color="purple"]:after {
   flex-grow: 12; }
 
 .item-prediction {
-  margin: 10px 20px !important;
   width: 500px !important; }
 
 .button-prediction {
@@ -3833,3 +3848,28 @@ body > .navbar-collapse[data-color="purple"]:after {
   margin: 10px 0px;
   background: #979797;
   height: 1px; }
+
+.main-validation {
+  width: 900px;
+  height: 40px;
+  background-color: transparent;
+  margin-left: 10px !important;
+  position: absolute;
+  border-radius: 2px;
+  display: none;
+  transition-duration: display 0.5s;
+  animation-name: example;
+  animation-duration: 12s; }
+  .main-validation > p {
+    color: #4d4d4d;
+    background-color: none;
+    animation-name: example;
+    animation-duration: 12s;
+    margin: 10px 15px !important;
+    font-weight: 700; }
+  .main-validation.danger {
+    background: #f8b7bd; }
+  .main-validation.block {
+    display: block; }
+  .main-validation.success {
+    background: #34b479; }
