--- a/dashboard/src/assets/sass/lbd/_css-grid.scss
+++ b/dashboard/src/assets/sass/lbd/_css-grid.scss
@@ -200,6 +200,7 @@
         grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
         grid-template-rows: auto; 
         grid-template-areas: 
+        "navigation_predict_occult navigation_predict_occult"
         "list_predict_occult stats_predict_occult"
         "exec_predict_occult exec_predict_occult"
         "table_predict_occult table_predict_occult"
