Created Asteroid Detail for Predict step

--- a/dashboard/src/assets/sass/lbd/_typography.scss
+++ b/dashboard/src/assets/sass/lbd/_typography.scss
@@ -95,3 +95,11 @@ h1 .subtitle{
 .text-medium-dark-gray {
     color: $medium-dark-gray;
 }
+
+.text-light-red {
+    color: $light-red;
+}
+
+.text-indianred {
+    color: indianred;
+}
