--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -128,6 +128,12 @@ h1 .subtitle {
 .text-medium-dark-gray {
   color: #AAAAAA; }
 
+.text-light-red {
+  color: rgba(255, 74, 85, 0.2); }
+
+.text-indianred {
+  color: indianred; }
+
 /*     General overwrite     */
 body,
 .wrapper {
