--- a/dashboard/src/assets/sass/lbd/_css-grid.scss
+++ b/dashboard/src/assets/sass/lbd/_css-grid.scss
@@ -111,8 +111,13 @@
 }
 
 .stats_predict_occult {
-    grid-area: stats_predict_occult ;
+    grid-area: stats_predict_occult;
 }
+
+.stats_predict_occult2 {
+    grid-area: stats_predict_occult2;
+}
+
 
 .exec_predict_occult {
     grid-area: exec_predict_occult;
@@ -197,13 +202,12 @@
 
     .template-predict-occult {
         grid-gap: 0.75rem;
-        grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
+        grid-template-columns: repeat(3, minmax(12.5rem, 1fr));
         grid-template-rows: auto; 
         grid-template-areas: 
-        "navigation_predict_occult navigation_predict_occult"
-        "list_predict_occult stats_predict_occult"
-        "exec_predict_occult exec_predict_occult"
-        "table_predict_occult table_predict_occult"
+        "navigation_predict_occult navigation_predict_occult navigation_predict_occult"
+        "list_predict_occult stats_predict_occult stats_predict_occult2"
+        "table_predict_occult table_predict_occult table_predict_occult"
         ; 
     }
 
