--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -1089,6 +1089,16 @@ body > .navbar-collapse[data-color="purple"]:after {
   .status_table.failure {
     background-color: #FF4A55 !important; }
 
+.simple_property_table tbody > tr > td {
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #403f3f; }
+
+.simple_property_table tr:nth-child(even) {
+  background-color: #f2f2f2; }
+
 /*      Checkbox and radio         */
 .checkbox,
 .radio {
