Composing panel areas #174

--- a/dashboard/src/assets/sass/lbd/_flexbox.scss
+++ b/dashboard/src/assets/sass/lbd/_flexbox.scss
@@ -125,5 +125,9 @@
 }
 
 .box-margin{ 
-    margin: 0 !important;
+    margin: 10px!important;
+ }
+
+.border-edit-right {
+    border-right: 2px solid $panel-costumize-default !important;
 }
