--- a/dashboard/src/assets/sass/lbd/_listStats.scss
+++ b/dashboard/src/assets/sass/lbd/_listStats.scss
@@ -162,16 +162,14 @@
 }
 
 .list-text {
-  font-family: $font-family-lato;
   font-weight: 400;
-  color: $panel-costumize-default;
+  color: #000;
 }
 
 .list-value {
-  font-family: $font-family-lato;
-  font-weight: bold !important;
+  font-weight: 500 !important;
   font-size: 16px !important;
-  color: $panel-costumize-default;
+  color: rgb(27, 27, 27);
 }
 // criar arquivo
 
