--- a/dashboard/src/assets/sass/lbd/_variables.scss
+++ b/dashboard/src/assets/sass/lbd/_variables.scss
@@ -279,7 +279,7 @@ $h-6-progressbar:        6px;
 $h-9-progressbar:        9px;
 $h-12-progressbar:       12px;
 
-$panel-costumize-default: #717172; //#575555;
+$panel-costumize-default: #5e5e5e; //#575555;
 $panel-costumize-hr: #b8b4b4;
 
 
