created in model news inpunts and fix bug in radiobutton # 203

--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -3468,6 +3468,9 @@ body > .navbar-collapse[data-color="purple"]:after {
   height: 1px;
   background-color: #c7c7c7 !important; }
 
+.margin-panel {
+  margin: 10px; }
+
 .content-main {
   min-height: 20%;
   background: white;
