insert modal in skybot run

--- a/dashboard/src/assets/sass/lbd/_panel-costumize.scss
+++ b/dashboard/src/assets/sass/lbd/_panel-costumize.scss
@@ -77,6 +77,10 @@
 }
 
 
-.panel-height-fixed {
-    min-height: 200px;
+.panel-height-skybot {
+    min-height: 170px;
+}
+
+.panel-width-skybot {
+    min-width: 30%;
 }
