--- a/dashboard/src/assets/sass/lbd/_cardContent.scss
+++ b/dashboard/src/assets/sass/lbd/_cardContent.scss
@@ -39,3 +39,7 @@
     .linha-vertical {
         border-right: 1px solid #c6c6c6 !important;/* Adiciona borda esquerda na div como ser fosse uma linha.*/
       }
+
+.content-skybot {
+    margin: 10px !important;
+}
