--- a/dashboard/src/assets/sass/light-bootstrap-dashboard.css
+++ b/dashboard/src/assets/sass/light-bootstrap-dashboard.css
@@ -3471,8 +3471,11 @@ body > .navbar-collapse[data-color="purple"]:after {
 .margin-panel {
   margin: 10px; }
 
-.panel-height-fixed {
-  min-height: 200px; }
+.panel-height-skybot {
+  min-height: 170px; }
+
+.panel-width-skybot {
+  min-width: 30%; }
 
 .content-main {
   min-height: 20%;
@@ -3503,6 +3506,9 @@ body > .navbar-collapse[data-color="purple"]:after {
 .linha-vertical {
   border-right: 1px solid #c6c6c6 !important;
   /* Adiciona borda esquerda na div como ser fosse uma linha.*/ }
+
+.content-skybot {
+  margin: 10px !important; }
 
 @media only screen and (min-width: 640px) {
   .size-plot {
