fix table column status

--- a/dashboard/src/assets/sass/lbd/_tables.scss
+++ b/dashboard/src/assets/sass/lbd/_tables.scss
@@ -102,6 +102,9 @@
     &.failure {
         background-color: $danger-color !important;
     }
+    &.pending {
+        background-color: $custom-dark-gray !important;
+    }
 }
 
 .simple_property_table {
