Added CCD associate with Q3C, and create a interface to display skybot output by exposure

--- a/dashboard/src/assets/sass/lbd/_buttons.scss
+++ b/dashboard/src/assets/sass/lbd/_buttons.scss
@@ -132,3 +132,11 @@
     border-radius: 1px;
 
 }
+
+.btn-TNO-danger  {
+    background: $danger-color !important;
+    border: none !important;
+    width: 100px   !important;
+    border-radius: 1px;
+
+}
