--- a/dashboard/src/assets/sass/lbd/_tables.scss
+++ b/dashboard/src/assets/sass/lbd/_tables.scss
@@ -105,6 +105,9 @@
     &.pending {
         background-color: $custom-dark-gray !important;
     }
+    &.canceled {
+        background-color: $danger-color !important;
+    }    
 }
 
 .simple_property_table {
