Implemented registry of asteroid related to process and was added record of ccd_images relating to each asteroid.

--- a/dashboard/src/assets/sass/lbd/_tables.scss
+++ b/dashboard/src/assets/sass/lbd/_tables.scss
@@ -107,7 +107,10 @@
     }
     &.canceled {
         background-color: $danger-color !important;
-    }    
+    }
+    &.reexecute {
+        background-color: $default-states-color !important;
+    }        
 }
 
 .simple_property_table {
