--- a/core_admin/templates/rest_framework/api.html
+++ b/core_admin/templates/rest_framework/api.html
@@ -1,6 +1,6 @@
 {% extends "rest_framework/base.html" %}
 
-{% block title %}Small Solar System Objects (SSSO){% endblock %}
+{% block title %}SSSO - API{% endblock %}
 
 {% block branding %}
 <a class='navbar-brand' rel="nofollow" href='http://www.django-rest-framework.org'>
